2011-06-03  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/planner.c: deal with noop first, jump to a new label
	  "send", and reindent - one less indentation level

2011-06-03  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/planner.c: Define nb_client, nb_server and has_* earlier.
	  This is a preparation for the next commit.

2011-06-03  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/planner.c: remove two unused variables

2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
	* client-src/sendbackup-dump.c: fix compile error due to undeclared
	  tmpbuf, remove tmpbuf entirely

2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
        * Many files (12): remove unndeeded uses of the temporary variable
	  tmpbuf in the g_strdup_printf(e1, e2, ..., NULL) case

2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
        * Many files (15): remove unndeeded uses of the temporary variable
	  tmpbuf in the g_strconcat(e1, e2, ..., NULL) case

2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
        * Many files (14): remove unndeeded uses of the temporary variable
	  tmpbuf in the g_strconcat(e1, e2, NULL) case

2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
	* Many files (14): Get rid of newvstrallocf()
	* common-src/amanda.h, common-src/alloc.c: remove macro, prototypes,
	  implementation

2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
	* Many files (20): Get rid of newvstralloc()
	* common-src/amanda.h, common-src/alloc.c: remove macro, prototypes,
	  implementation

2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
	* Many files (6): Get rid of newstralloc2()
	* common-src/amanda.h: remove macro

2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
	* Many files (28): Get rid of stralloc2()
	* common-src/amanda.h: remove macro

2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
	* Many files (30): Get rid of newstralloc()
	* common-src/alloc.c, common-src/amanda.h: remove macros, prototypes,
	  implementation
